added written responses to notebook

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1589,8 +1589,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO:\n",
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "## **Discussion about the linear relationship:**\n",
+    "\n",
+    "### Linear regression on Northern Hemisphere\n",
+    "There is a strong negative correlation between northern latitudes and temperature. More northern latitudes experience lower temperatures, and temperatures increase as the location gets closer to the equator.\n",
+    "\n",
+    "### Linear regression on Southern Hemisphere\n",
+    "There is a strong positive correlation between southern latitudes and temperature. More southern latitudes experience lower temperatures, and temperatures increase as the location gets closer to the equator."
    ]
   },
   {
@@ -1660,9 +1665,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO:\n",
+    "## **Discussion about the linear relationship:**\n",
     "\n",
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "### Linear regression on Northern Hemisphere\n",
+    "There is a weak positive correlation between northern hemisphere latitudes and humidity. Humidity increases slightly as the location moves further north from the equator.\n",
+    "\n",
+    "### Linear regression on Southern Hemisphere\n",
+    "There is a weak positive correlation between southern hemisphere latitudes and humidity. Humidity increases slightly as the location moves closer to the equator."
    ]
   },
   {
@@ -1732,9 +1741,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO:\n",
+    "## **Discussion about the linear relationship:**\n",
     "\n",
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "### Linear regression on Northern Hemisphere\n",
+    "There is a weak positive correlation between northern hemisphere latitudes and cloudiness. The cloudiness percentage increases slightly as the location moves further north from the equator.\n",
+    "\n",
+    "### Linear regression on Southern Hemisphere\n",
+    "There is a weak positive correlation between southern hemisphere latitudes and cloudiness. The cloudiness percentage increases slightly as the location moves closer to the equator."
    ]
   },
   {
@@ -1804,9 +1817,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO:\n",
+    "## **Discussion about the linear relationship:**\n",
     "\n",
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "### Linear regression on Northern Hemisphere\n",
+    "There is almost no correlation between northern hemisphere latitudes and wind speed. The R-value of -0.04 indicates a very weak correlation between the two values.\n",
+    "\n",
+    "### Linear regression on Southern Hemisphere\n",
+    "There is a weak negative correlation between southern hemisphere latitudes and wind speed. The wind speed percentage increases slightly as the location moves further away from the equator."
    ]
   }
  ],
